[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/hud/debug/VehiclesDebug.gd" type="Script" id=1]

[node name="VehiclesDebug" type="GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VehicleLabel" type="Label" parent="."]
margin_right = 103.0
margin_bottom = 14.0
text = "Vehicle:"
align = 2

[node name="VehicleValue" type="Label" parent="."]
margin_left = 107.0
margin_right = 107.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XInputLabel" type="Label" parent="."]
margin_top = 18.0
margin_right = 103.0
margin_bottom = 32.0
text = "Input FW/BW:"
align = 2

[node name="XInputValue" type="Label" parent="."]
margin_left = 107.0
margin_top = 18.0
margin_right = 107.0
margin_bottom = 32.0

[node name="BInputLabel" type="Label" parent="."]
margin_top = 36.0
margin_right = 103.0
margin_bottom = 50.0
text = "Input Brake:"
align = 2

[node name="BInputValue" type="Label" parent="."]
margin_left = 107.0
margin_top = 36.0
margin_right = 107.0
margin_bottom = 50.0

[node name="YInputLabel" type="Label" parent="."]
margin_top = 54.0
margin_right = 103.0
margin_bottom = 68.0
text = "Input Left/Right:"
align = 2

[node name="YInputValue" type="Label" parent="."]
margin_left = 107.0
margin_top = 54.0
margin_right = 107.0
margin_bottom = 68.0

[node name="EngineLabel" type="Label" parent="."]
margin_top = 72.0
margin_right = 103.0
margin_bottom = 86.0
text = "Engine Force:"
align = 2

[node name="EngineValue" type="Label" parent="."]
margin_left = 107.0
margin_top = 72.0
margin_right = 107.0
margin_bottom = 86.0

[node name="BrakeLabel" type="Label" parent="."]
margin_top = 90.0
margin_right = 103.0
margin_bottom = 104.0
text = "Brake Force:"
align = 2

[node name="BrakeValue" type="Label" parent="."]
margin_left = 107.0
margin_top = 90.0
margin_right = 107.0
margin_bottom = 104.0

[node name="SteeringLabel" type="Label" parent="."]
margin_top = 108.0
margin_right = 103.0
margin_bottom = 122.0
text = "Steering:"
align = 2

[node name="SteeringValue" type="Label" parent="."]
margin_left = 107.0
margin_top = 108.0
margin_right = 107.0
margin_bottom = 122.0
